--- a/aboutme.html
+++ b/aboutme.html
@@ -19,6 +19,7 @@
           <li><a href="index.html">Resume</a></li>
           <li id="onpage"><a href="aboutme.html">About Me</a></li>
           <li><a href="easportsfc24.html">EA Sports FC 24</a></li>
+          <li><a href="map.html">Map</a></li>
         </ul>
         </div>
       </nav>
