--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <li id="onpage"><a href="index.html">Resume</a></li>
           <li><a href="aboutme.html">About Me</a></li>
           <li><a href="easportsfc24.html">EA Sports FC 24</a></li>
+          <li><a href="map.html">Map</a></li>
         </ul>
         </div>
       </nav>
