changed the color of h1 and p

--- a/map.html
+++ b/map.html
@@ -24,13 +24,13 @@
         </div>
       </nav>
     </header>
-    <h1>Map</h1>
+    <h1 id="maph1">Map</h1>
     <div id="mapwrapper">
     <div id="mapcanvas"></div>
     </div>
     <footer>
-      <p>Made by Jimmy Salazar</p>
-      <p>Contact Information: jsalazar8@hawk.iit.edu</p>    
+      <p class="mapp">Made by Jimmy Salazar</p>
+      <p class="mapp">Contact Information: jsalazar8@hawk.iit.edu</p>    
     </footer>
   </body>
 </html>
