--- a/aboutme.html
+++ b/aboutme.html
@@ -8,9 +8,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/js/swiffy-slider.min.js" crossorigin="anonymous" defer></script>
-    <link href="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/css/swiffy-slider.min.css" rel="stylesheet" crossorigin="anonymous">
     <script async src="js/script.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+	 <script>
+      $(document).ready(function(){
+        $(".bxslider").bxSlider({
+		  mode: 'fade'
+		});
+      });
+    </script>
   </head>
   <body id="aboutmebody">
     <header>
@@ -40,15 +48,13 @@
         <li><h3 class="aboutmeh">Marie Sklodowska Curie Metropolitan High School</h3></li>
         <li><h3 class="aboutmeh">Illinois Institute of Technology</h3></li>
       </ul>
-      <div class="swiffy-slider">
-        <ul class="slider-container">
+      <div class="slider">
+        <ul class="bxslider">
           <li><img class="aboutmeimg" src="images/peck.jpg" alt="Peck Elementary School"></li>
           <li><img class="aboutmeimg" src="images/richardson.jpg" alt="Robert J. Richardson Middle School"></li>
           <li><img class="aboutmeimg" src="images/curie.jpg" alt="Marie Sklodowska Curie Metropolitan High School"></li>
           <li><img class="aboutmeimg" src="images/iit.jpg" alt="Illinois Institute of Technology Mies Campus"></li>
         </ul>
-      <button type="button" class="slider-nav"></button>
-      <button type="button" class="slider-nav slider-nav-next"></button>
       </div>
     </div>
     <div id="aboutmeextras">
